--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,8 @@ body, html {
   line-height: 1;
 }
 
+/* Глобальный заголовок */
+/* Глобальный подзаголовок */
 /*Обнуляющий стиль - конец*/
 body {
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
@@ -104,6 +106,21 @@ body {
   }
 }
 
+/* Изображения */
+._ibg {
+  position: relative;
+}
+
+._ibg img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
 /* Медиазапросы для контейнера - конец */
 .wrapper {
   overflow: hidden;
@@ -118,6 +135,7 @@ body {
   position: relative;
 }
 
+/* Общий стиль для кнопок */
 .button {
   background-color: #34C759;
   border-radius: 43px;
@@ -143,6 +161,63 @@ body {
   border: 1px solid #34C759;
 }
 
+/* Общий стиль для заголовков */
+.main-title__text {
+  text-align: center;
+  margin-bottom: 30px;
+  position: relative;
+}
+
+.main-title__text::before {
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+  font-weight: 900;
+  font-size: 100px;
+  line-height: 1.5;
+  letter-spacing: 0.2em;
+  color: #303030;
+}
+
+.main-title__line {
+  max-width: 60px;
+  min-height: 2px;
+  background-color: #34C759;
+  margin: 0 auto;
+}
+
+.span__main-title {
+  font-size: 36px;
+  line-height: 2.5;
+  letter-spacing: 0.2em;
+  color: #D9D9D9;
+  position: relative;
+  z-index: 1;
+  text-transform: capitalize;
+}
+
+@media (max-width: 800px) {
+  .span__main-title {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 600px) {
+  .span__main-title {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 525px) {
+  .span__main-title {
+    font-size: 18px;
+  }
+}
+
+/* Header начало */
 .header {
   position: absolute;
   top: 0;
@@ -205,6 +280,11 @@ body {
 
 .logo__picture:not(:last-child) {
   margin-right: 8.97px;
+  max-width: 25px;
+}
+
+.logo__text {
+  max-width: 175px;
 }
 
 .menu {
@@ -235,6 +315,8 @@ body {
           transition-duration: 0.3s;
 }
 
+/* Header конец */
+/* Первая часть начало */
 .first-part {
   background: -webkit-gradient(linear, left bottom, left top, from(rgba(33, 33, 33, 0.5)), to(rgba(33, 33, 33, 0.5))), url("../img/main/first-part/placeholder.jpg") right bottom/cover no-repeat;
   background: -webkit-linear-gradient(bottom, rgba(33, 33, 33, 0.5), rgba(33, 33, 33, 0.5)), url("../img/main/first-part/placeholder.jpg") right bottom/cover no-repeat;
@@ -381,3 +463,778 @@ body {
 .span__subtitle {
   text-transform: uppercase;
 }
+
+/* Первая часть конец */
+/* Вторая часть начало */
+.second-part {
+  margin-top: -240px;
+}
+
+.second-part__container {
+  background-color: #252525;
+  -webkit-box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+}
+
+.second-part__content {
+  padding: 105px 65px 90px 65px;
+  text-align: center;
+}
+
+@media (max-width: 600px) {
+  .second-part__content {
+    padding: 40px 10px 30px 10px;
+  }
+}
+
+.second-part__title {
+  position: relative;
+}
+
+.second-part__title:not(:last-child) {
+  margin-bottom: 61px;
+}
+
+.second-part__title::before {
+  content: "ABOUT";
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+  font-weight: 900;
+  font-size: 100px;
+  line-height: 1.5;
+  letter-spacing: 0.2em;
+  color: #303030;
+}
+
+@media (max-width: 800px) {
+  .second-part__title::before {
+    font-size: 80px;
+  }
+}
+
+@media (max-width: 600px) {
+  .second-part__title::before {
+    font-size: 60px;
+  }
+}
+
+@media (max-width: 525px) {
+  .second-part__title::before {
+    font-size: 40px;
+  }
+}
+
+.second-part__subtitle {
+  max-width: 734px;
+  color: #A6A6A6;
+  font-size: 16px;
+  line-height: 1.875;
+  margin: 0 auto;
+}
+
+.second-part__subtitle:not(:last-child) {
+  margin-bottom: 90px;
+}
+
+@media (max-width: 800px) {
+  .second-part__subtitle {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 600px) {
+  .second-part__subtitle {
+    font-size: 12px;
+  }
+}
+
+.second-part__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.second-part__arrow-left {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 60px;
+          flex: 0 0 60px;
+  border-radius: 50%;
+  height: 60px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.second-part__arrow-left:not(:last-child) {
+  margin-right: 61px;
+}
+
+@media (max-width: 700px) {
+  .second-part__arrow-left:not(:last-child) {
+    margin-right: 20px;
+  }
+}
+
+@media (max-width: 600px) {
+  .second-part__arrow-picture {
+    max-width: 40px;
+    height: auto;
+  }
+}
+
+.second-part__image-left {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 350px;
+          flex: 0 1 350px;
+  padding: 0 0 24.545% 0;
+}
+
+.second-part__image-left:not(:last-child) {
+  margin-right: 34px;
+}
+
+@media (max-width: 700px) {
+  .second-part__image-left:not(:last-child) {
+    margin-right: 20px;
+  }
+}
+
+@media (max-width: 700px) {
+  .second-part__image-left {
+    padding: 0 0 40% 0;
+  }
+}
+
+.second-part__image-right {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 350px;
+          flex: 0 1 350px;
+  padding: 0 0 24.545% 0;
+}
+
+.second-part__image-right:not(:last-child) {
+  margin-right: 61px;
+}
+
+@media (max-width: 700px) {
+  .second-part__image-right {
+    display: none;
+  }
+}
+
+.second-part__arrow-right {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 60px;
+          flex: 0 0 60px;
+  border-radius: 50%;
+  height: 60px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.span__second-part-title {
+  font-size: 30px;
+  letter-spacing: 0.2em;
+  line-height: 2;
+  color: #D9D9D9;
+  position: relative;
+  z-index: 1;
+  text-transform: capitalize;
+}
+
+@media (max-width: 800px) {
+  .span__second-part-title {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 600px) {
+  .span__second-part-title {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 525px) {
+  .span__second-part-title {
+    font-size: 18px;
+  }
+}
+
+/* Вторая часть конец */
+/* Третья часть начало */
+.part__third {
+  padding: 61px 0 31px 0;
+}
+
+.third-part__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0px -15px;
+  row-gap: 40px;
+}
+
+.third-part__title {
+  text-align: center;
+}
+
+.third-part__title:not(:last-child) {
+  margin-bottom: 60px;
+}
+
+.third-part__items {
+  padding: 0px 15px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 25%;
+          flex: 1 1 25%;
+  min-width: 250px;
+}
+
+.third-part__item {
+  background-color: #252525;
+  -webkit-box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+  padding: 24px;
+  height: 100%;
+}
+
+.third-part__item:hover {
+  background-color: #34C759;
+  color: #191919;
+  -webkit-transition-duration: 0.3s;
+       -o-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+}
+
+.title-third-part {
+  position: relative;
+}
+
+.title-third-part::before {
+  content: "WORK";
+  position: absolute;
+  -webkit-transform: translate(-48%, -70%);
+      -ms-transform: translate(-48%, -70%);
+          transform: translate(-48%, -70%);
+  left: 50%;
+  top: 50%;
+  font-weight: 900;
+  font-size: 100px;
+  line-height: 1.5;
+  letter-spacing: 0.2em;
+  color: #303030;
+}
+
+@media (max-width: 800px) {
+  .title-third-part::before {
+    font-size: 80px;
+    -webkit-transform: translate(-48%, -78%);
+        -ms-transform: translate(-48%, -78%);
+            transform: translate(-48%, -78%);
+  }
+}
+
+@media (max-width: 600px) {
+  .title-third-part::before {
+    font-size: 60px;
+    -webkit-transform: translate(-48%, -85%);
+        -ms-transform: translate(-48%, -85%);
+            transform: translate(-48%, -85%);
+  }
+}
+
+@media (max-width: 525px) {
+  .title-third-part::before {
+    font-size: 40px;
+    -webkit-transform: translate(-48%, -100%);
+        -ms-transform: translate(-48%, -100%);
+            transform: translate(-48%, -100%);
+  }
+}
+
+.title-third-part__text:not(:last-child) {
+  margin-bottom: 61px;
+}
+
+.title-third-part__line {
+  max-width: 60px;
+  min-height: 2px;
+  background-color: #34C759;
+  margin: 0 auto;
+}
+
+.item-third-part__title {
+  font-size: 22px;
+  line-height: 1.166;
+  letter-spacing: -0.28px;
+  text-transform: capitalize;
+  max-width: 207px;
+}
+
+.item-third-part__title:not(:last-child) {
+  margin-bottom: 36px;
+}
+
+.item-third-part__title::after {
+  content: "";
+  display: block;
+  max-width: 56px;
+  height: 2px;
+  background-color: #34C759;
+  margin-top: 10px;
+}
+
+@media (max-width: 800px) {
+  .item-third-part__title {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 600px) {
+  .item-third-part__title {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 525px) {
+  .item-third-part__title {
+    font-size: 16px;
+  }
+}
+
+.item-third-part__text {
+  font-size: 13px;
+  line-height: 1.385;
+  letter-spacing: -0.16px;
+  opacity: 0.5;
+  max-width: 207px;
+}
+
+@media (max-width: 600px) {
+  .item-third-part__text {
+    font-size: 12px;
+  }
+}
+
+.span-third-part-title {
+  font-size: 36px;
+  line-height: 2.5;
+  letter-spacing: 0.2em;
+  color: #D9D9D9;
+  position: relative;
+  z-index: 1;
+  text-transform: capitalize;
+}
+
+@media (max-width: 800px) {
+  .span-third-part-title {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 600px) {
+  .span-third-part-title {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 525px) {
+  .span-third-part-title {
+    font-size: 18px;
+  }
+}
+
+/* Стили для анимации карточки. По идее переделать. */
+.item-third-part:hover .item-third-part__text {
+  color: #191919;
+  opacity: 1;
+}
+
+.item-third-part:hover .item-third-part__title::after {
+  background-color: #191919;
+  -webkit-transition-duration: 0.3s;
+       -o-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  max-width: 180px;
+}
+
+/* Подумать над выравниванием контента в карточках */
+/* Третья часть конец */
+/* Четвертая часть начало */
+/* Четвертая часть конец */
+.fourth-part {
+  padding: 91px 0px 30px 0px;
+}
+
+.fourth-part__title {
+  margin-bottom: 60px;
+}
+
+.fourth-part__text::before {
+  content: "DISHES";
+}
+
+@media (max-width: 800px) {
+  .fourth-part__text::before {
+    font-size: 80px;
+    -webkit-transform: translate(-48%, -50%);
+        -ms-transform: translate(-48%, -50%);
+            transform: translate(-48%, -50%);
+  }
+}
+
+@media (max-width: 600px) {
+  .fourth-part__text::before {
+    font-size: 60px;
+  }
+}
+
+@media (max-width: 525px) {
+  .fourth-part__text::before {
+    font-size: 40px;
+  }
+}
+
+.fourth-part__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 -15px;
+  row-gap: 30px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.fourth-part__item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 33.333%;
+          flex: 1 1 33.333%;
+  max-width: 350px;
+  padding: 0 15px;
+  min-width: 280px;
+}
+
+.fourth-part__item:hover {
+  border: 2px solid #34C759;
+  -webkit-transition-duration: 0.2s;
+       -o-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+}
+
+.fourth-part__body {
+  background-color: #252525;
+  -webkit-box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.fourth-part__link {
+  border-radius: 6px 6px 0 0;
+  padding: 0 0 75% 0;
+  overflow: hidden;
+}
+
+.fourth-part__link::after {
+  content: url("../img/main/fourth-part/more.svg");
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 40px;
+  height: 40px;
+}
+
+.fourth-part__description {
+  padding: 29px;
+}
+
+.description__title {
+  font-size: 32px;
+  line-height: 0.938;
+  color: #D9D9D9;
+}
+
+.description__subtitle {
+  font-size: 12px;
+  line-height: 1.333;
+  color: #A4A8B2;
+}
+
+.description__subtitle:not(:last-child) {
+  margin-bottom: 22px;
+}
+
+.description__text {
+  font-size: 13px;
+  line-height: 1.385;
+  color: #85878C;
+  letter-spacing: -0.16px;
+}
+
+.description__text:not(:last-child) {
+  margin-bottom: 26px;
+}
+
+.info-description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.info-description__btn {
+  font-weight: 900;
+  font-size: 10px;
+  line-height: 2;
+  letter-spacing: 0.2em;
+  color: #ffffff;
+  opacity: 50%;
+  text-transform: uppercase;
+  border-radius: 30px;
+  border: 2px solid #303030;
+  padding: 10px 20px;
+  min-width: 100px;
+  text-align: center;
+}
+
+.info-description__btn:hover {
+  color: #252525;
+  background-color: #34C759;
+  border: 2px solid transparent;
+}
+
+@media (max-width: 991px) {
+  .info-description__btn {
+    min-width: 80px;
+  }
+}
+
+@media (max-width: 991px) {
+  .info-description__stars {
+    margin-right: 20px;
+  }
+}
+
+.stars {
+  position: relative;
+  font-size: 28px;
+  display: inline-block;
+}
+
+.stars::before {
+  content: "★★★★★";
+  display: block;
+  overflow: hidden;
+}
+
+.stars__items {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  overflow: hidden;
+}
+
+.stars__item {
+  position: absolute;
+  width: 0%;
+  height: 0%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.stars__label {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 20%;
+          flex: 0 0 20%;
+  height: 100%;
+  cursor: pointer;
+  color: #4d4d4d;
+}
+
+.stars__label::before {
+  content: "★";
+  display: block;
+  -webkit-transition: color 0.3s ease 0s;
+  -o-transition: color 0.3s ease 0s;
+  transition: color 0.3s ease 0s;
+}
+
+.stars__label:hover,
+.stars__label:hover ~ .stars__label,
+.stars__label:checked ~ .stars__label:hover {
+  color: #F9AD3D;
+  opacity: 0.5;
+}
+
+.stars__item:checked,
+.stars__item:checked ~ .stars__label {
+  color: #F9AD3D;
+}
+
+/* Разобраться со звездами*/
+/*Конец четвертой части*/
+/*Начало пятой части*/
+.fifth-part {
+  padding: 61px 0px 0px 30px;
+}
+
+.fifth-part__text::before {
+  content: "CHEFS";
+}
+
+@media (max-width: 800px) {
+  .fifth-part__text::before {
+    font-size: 80px;
+    -webkit-transform: translate(-48%, -50%);
+        -ms-transform: translate(-48%, -50%);
+            transform: translate(-48%, -50%);
+  }
+}
+
+@media (max-width: 600px) {
+  .fifth-part__text::before {
+    font-size: 60px;
+  }
+}
+
+@media (max-width: 525px) {
+  .fifth-part__text::before {
+    font-size: 40px;
+  }
+}
+
+.fifth-part__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 -15px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  row-gap: 30px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.fifth-part__item {
+  padding: 0px 15px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 33.333%;
+          flex: 0 1 33.333%;
+  min-width: 350px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.fifth-part__title {
+  margin-bottom: 60px;
+}
+
+.item-object__chef {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.item-object__chef:not(:last-child) {
+  margin-bottom: 24px;
+}
+
+.item-object__icon {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 65px;
+          flex: 0 0 65px;
+  border-radius: 50%;
+  overflow: hidden;
+  height: 65px;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+
+.item-object__icon:not(:last-child) {
+  margin-right: 24px;
+}
+
+.item-object__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+}
+
+.item-object__name {
+  font-size: 18px;
+  line-height: 1.166;
+  letter-spacing: -0.22px;
+}
+
+.item-object__name:not(:last-child) {
+  margin-bottom: 6px;
+  letter-spacing: -0.15px;
+}
+
+.item-object__description {
+  opacity: 50%;
+  font-size: 12px;
+  line-height: 1.333;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+/*Конец пятой части*/
